# Codex_iOS

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
CodexSchoolAssistant/CodexSchoolAssistant/: CodexSchoolAssistantApp.swift  ContentView.swift
CodexSchoolAssistant/CodexSchoolAssistant.xcodeproj/: project.pbxproj
Codex_iOS/Codex_iOS/: AppNavigationView.swift  ChatViewModel.swift  Codex_iOSApp.swift  ContentView.swift  QuickChoiceParser.swift  RelayClient.swift  RelayModels.swift  RelayOptionsView.swift
Codex_iOS/Codex_iOS.xcodeproj/: project.pbxproj
Codex_iOS/Codex_iOS.xcodeproj/xcshareddata/xcschemes/: Codex_iOS.xcscheme  Release.xcscheme
Codex_iOS/Codex_iOSTests/: ChatViewModelTests.swift  QuickChoiceParserTests.swift
src/: main.rs
